pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hey-pod
  labels:
    zone: prod
    version: 1.0.0.0
spec:
  containers:
    - name: hey-cunt
      image: yogeshdass/nginx:v1
      ports:
        - containerPort: 80
