Jeeloapnizindagi.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: privyet-deploy
spec:
  replicas: 10
  template:
    metadata:
      labels:
        app: privyet-pod
        zone: prod
        version: 1.0.0.0
    spec:
      containers:
      - name: hey-cunt
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: privyet-service
  labels:
    app: privyet-pod
    zone: prod
    version: 1.0.0.0
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30007
    protocol: TCP
  selector:
    app: privyet-pod
