jenkins.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins-pod
        zone: prod
        version: 2.121.1
    spec:
      containers:
      - name: jenkins-container
        image: yogeshdass/jenkins:latest
        ports:
        - containerPort: 8080
        - containerPort: 50000
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 20
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: docker-socket
      volumes:
      - name: docker-socket 
        hostPath:
          path: /var/run/docker.sock
          type: File  
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  labels:
    app: jenkins-pod
    zone: prod
    version: 2.121.1
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30000
    protocol: TCP
  selector:
    app: jenkins-pod
