service.yml
apiVersion: v1
kind: Service
metadata:
  name: hey-service
  labels:
    app: hey-world
spec:
# it exposes the app outside of cluster by adding a cluster wide port on top of  cluster ip
  type: NodePort
  ports:
  - port: 80
#default will set random port
    nodePort: 30000
    protocol: TCP
#it has to  match with  pod label in replication contorller
  selector:
    app: hey-world
